telepathy-haze (0.1.2-2) UNRELEASED; urgency=low

  * Set libexecdir to /usr/lib/telepathy/ in debian/rules - future upstream
    releases will install to libexecdir, and for Debian we've decided to put
    all Telepathy D-Bus services in the same directory, since each source
    package generally only installs one service
  * Set bindir to /usr/lib/telepathy too, so the current version gets moved
    to that directory too
  * Provide a man page

 -- Simon McVittie <smcv@ianadd.pseudorandom.co.uk>  Sat, 03 Nov 2007 16:30:14 +0000

telepathy-haze (0.1.2-1) unstable; urgency=low

  * New upstream release
  * Fix watch file url
  * Add Provides: telepathy-connection-manager

 -- Laurent Bigonville <bigon@bigon.be>  Fri, 28 Sep 2007 20:20:41 +0200

telepathy-haze (0.1.1-2) unstable; urgency=low

  * Use libpurple-dev instead of pidgin-dev as build-dep

 -- Laurent Bigonville <bigon@bigon.be>  Mon, 03 Sep 2007 14:26:26 +0200

telepathy-haze (0.1.1-1) unstable; urgency=low

  [ Laurent Bigonville ]
  * Initial release. (Closes: #438729)

 -- Sjoerd Simons <sjoerd@debian.org>  Fri, 24 Aug 2007 14:59:07 +0200