@@ -1,2 +1,2 @@
 version=3
-http://salami.ox.compsoc.net/~resiak/telepathy-haze/telepathy-haze-(.*).tar.gz
+http://telepathy.freedesktop.org/releases/telepathy-haze/telepathy-haze-(.*).tar.gz
