@@ -7,8 +7,10 @@ telepathy-haze (0.1.2-2) UNRELEASED; urgency=low
   * Set bindir to /usr/lib/telepathy too, so the current version gets moved
     to that directory too
   * Provide a man page
+  * Update watch file to point to telepathy.freedesktop.org, now that the
+    upstream author can make uploads there (Closes: #450246)
 
- -- Simon McVittie <smcv@ianadd.pseudorandom.co.uk>  Sat, 03 Nov 2007 16:30:14 +0000
+ -- Simon McVittie <smcv@ianadd.pseudorandom.co.uk>  Wed, 07 Nov 2007 13:15:54 +0000
 
 telepathy-haze (0.1.2-1) unstable; urgency=low
 
